fix dark mode

--- a/src/styles/theme.pcss
+++ b/src/styles/theme.pcss
@@ -1,4 +1,4 @@
-[data-theme="light"] {
+[class="light"] {
   --button-bg1: #5964e0;
   --button-bg1-hover: #939bf4;
 
@@ -17,7 +17,7 @@
   --location-color: var(--button-bg1);
 }
 
-[data-theme="dark"] {
+[class="dark"] {
   --button-bg1: #5964e0;
   --button-bg1-hover: #939bf4;
 
